--- a/2.끝말잇기/package.json
+++ b/2.끝말잇기/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "word-relay",
+  "name": "2.word",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve --env development"
   },
-  "author": "ZeroCho",
-  "license": "ISC",
+  "author": "Ellin",
+  "license": "MIT",
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "node": "^20.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -19,8 +19,9 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "babel-loader": "^8.1.0",
     "react-refresh": "^0.11.0",
-    "webpack": "^5.3.2",
-    "webpack-cli": "^4.1.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.0.0"
-  }
+  },
+  "description": ""
 }
